// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Select] render test should render without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "height": 40,
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#CBD7E5",
        "borderRadius": 6,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": "100%",
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingBottom": 14,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 14,
        "position": "relative",
        "width": "100%",
      }
    }
    testID="SELECT_WRAPPER"
  >
    <Text
      disabled={false}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#2b2b2b",
            "fontSize": 12,
          },
        ]
      }
    >
      Testing-placeholder
    </Text>
    <View
      style={
        Object {
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
        }
      }
      testID="SELECT_SUFFIX"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 20,
              "justifyContent": "center",
              "width": 20,
            },
          ]
        }
      >
        <View>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="20"
            bbWidth="20"
            focusable={false}
            height="20"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={20}
            vbWidth={20}
            width="20"
          >
            <RNSVGGroup>
              <RNSVGLine
                opacity={0.95}
                propList={
                  Array [
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                  ]
                }
                stroke={4281019179}
                strokeLinecap={1}
                strokeWidth="1.5"
                x1={5}
                x2={10}
                y1={7}
                y2={12}
              />
              <RNSVGLine
                opacity={0.95}
                propList={
                  Array [
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                  ]
                }
                stroke={4281019179}
                strokeLinecap={1}
                strokeWidth="1.5"
                x1={10}
                x2={15}
                y1={12}
                y2={7}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 1,
          "overflow": "hidden",
          "width": "100%",
        },
      ]
    }
    visible={false}
  >
    <RCTScrollView
      keyboardDismissMode="on-drag"
      scrollEventThrottle={0.0001}
      style={
        Object {
          "backgroundColor": "#ffffff",
          "border": "1px solid #CBD7E5",
          "borderRadius": 6,
          "boxShadow": "0px 2px 4px rgba(212, 210, 212, 0.8)",
          "height": 0,
        }
      }
      testID="SELECT_CHILD_SCROLLVIEW"
    >
      <View>
        <View
          onLayout={[Function]}
        />
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`[SelectItem] render test should render without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "height": 40,
      },
    ]
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#CBD7E5",
        "borderRadius": 6,
        "borderStyle": "solid",
        "borderWidth": 1,
        "flexDirection": "row",
        "height": "100%",
        "justifyContent": "space-between",
        "opacity": 1,
        "paddingBottom": 14,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 14,
        "position": "relative",
        "width": "100%",
      }
    }
    testID="SELECT_WRAPPER"
  >
    <Text
      disabled={false}
      style={
        Array [
          Object {
            "alignSelf": "center",
            "color": "#2b2b2b",
            "fontSize": 12,
          },
        ]
      }
    >
      Item-1
    </Text>
    <View
      style={
        Object {
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
        }
      }
      testID="SELECT_SUFFIX"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 20,
              "justifyContent": "center",
              "width": 20,
            },
          ]
        }
      >
        <View>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="20"
            bbWidth="20"
            focusable={false}
            height="20"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={20}
            vbWidth={20}
            width="20"
          >
            <RNSVGGroup>
              <RNSVGLine
                opacity={0.95}
                propList={
                  Array [
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                  ]
                }
                stroke={4281019179}
                strokeLinecap={1}
                strokeWidth="1.5"
                x1={5}
                x2={10}
                y1={7}
                y2={12}
              />
              <RNSVGLine
                opacity={0.95}
                propList={
                  Array [
                    "stroke",
                    "strokeWidth",
                    "strokeLinecap",
                  ]
                }
                stroke={4281019179}
                strokeLinecap={1}
                strokeWidth="1.5"
                x1={10}
                x2={15}
                y1={12}
                y2={7}
              />
            </RNSVGGroup>
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "marginTop": 1,
          "overflow": "hidden",
          "width": "100%",
        },
      ]
    }
    visible={false}
  >
    <RCTScrollView
      keyboardDismissMode="on-drag"
      scrollEventThrottle={0.0001}
      style={
        Object {
          "backgroundColor": "#ffffff",
          "border": "1px solid #CBD7E5",
          "borderRadius": 6,
          "boxShadow": "0px 2px 4px rgba(212, 210, 212, 0.8)",
          "height": 0,
        }
      }
      testID="SELECT_CHILD_SCROLLVIEW"
    >
      <View>
        <View
          onLayout={[Function]}
        />
      </View>
    </RCTScrollView>
  </View>
</View>
`;
